# kedro-doorstop

./: .isort.cfg  MANIFEST.in  Makefile  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  ws.code-workspace
example/: .kedro.yml  README.md  setup.cfg
example/docs/source/: index.rst
example/src/: setup.py
example/src/example/: pipeline.py  run.py
example/src/tests/: test_run.py
kedro_doorstop/: __init__.py  plugin.py
