[tool.poetry]
name = "kedro-doorstop"
version = "0.1.0"
description = "Kedro plugin for integrating doorstop into the Kedro CLI"
authors = ["Florian Kromer <florian.kromer@mailbox.org>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
doorstop = "^2.1.1"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
pydocstyle = "^5.0.2"
mypy = "^0.770"
flake8 = "^3.8.2"
flake8-bandit = "^2.1.2"
isort = "^4.3.21"
kedro = "^0.16.1"
pylint = "^2.5.2"
black = "^19.10b0"
tox = "^3.15.1"
wheel = "^0.34.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
